# SDLC_automation

./: .gitignore  CMakeLists.txt  COMPLETE_FLOW_AND_TESTING_GUIDE.md  QUICK_START_TESTING.md  README.md  START_HERE.md  TESTING_FLOW_REFERENCE.md  calculatori0lofytx_test.cpp  requirements.txt  run_all_tests.sh
.devcontainer/: devcontainer.json  on-create.sh  post-create.sh
.github/workflows/: validate.yml
docs/: codespaces-prebuilds.md
include/example/: calculator.hpp
klockwork_automation/: README.md
klockwork_automation/include/: klockwork_rules.hpp
klockwork_automation/prompts/: klockwork_fixer.prompt.yml  klockwork_rules.json
klockwork_automation/prompts/evals/: README.md  klockwork_fixer_cases.jsonl
klockwork_automation/scripts/: collect_klockwork_issues.py  orchestrate_klockwork_fix.py  run_klockwork_eval.sh  validate_klockwork_fix.sh
prompts/: unit_test_generator.prompt.yml
scripts/: collect_pr_diff.py  run_prompt_eval.sh  validate.sh
src/: calculator.cpp
tests/: calculator_test.cpp
tests/automation/: test_build_validation.sh  test_integration.sh  test_klockwork_collection.sh  test_klockwork_evaluation.sh  test_klockwork_validation.sh  test_unit_test_collection.sh
unit_test_automation/: README.md  __init__.py  __main__.py  build_manager.py  cli.py  config.py  diff_collector.py  header_resolver.py  llm_client.py  orchestrator.py  test_merger.py
unit_test_automation/include/example/: calculator.hpp
unit_test_automation/prompts/: build_fix.prompt.yml  unit_test_generator.prompt.yml
unit_test_automation/prompts/evals/: README.md  unit_test_generator_cases.jsonl
unit_test_automation/scripts/: collect_pr_diff.py  orchestrate_mr_test.py  run_prompt_eval.sh  validate.sh
